# cars-stock

./: .gitignore  AI_CONTEXT.md  README.md  car_service.py  cars.json  database.py  docker-compose.yml  main.py  start.bat  start.sh
.github/workflows/: ci.yml
app/backend/: README.md  main.py  migrate_columns.py  pyproject.toml
app/backend/gerenciador_estoque_carros.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/backend/src/: main.py
app/backend/src/controllers/: car_controller.py  user_controller.py
app/backend/src/models/: car_schema.py  user_schema.py
app/backend/src/repositories/: cars.db  cars.json  database.py  entities.py
app/backend/src/services/: car_service.py
app/frontend/: README.md  vercel.json
app/frontend/src/components/: CarCard.tsx  CarModal.tsx  FloatingActionButton.tsx  Header.tsx
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/controllers/: car_controller.py  settings_controller.py
backend/src/repositories/: database.py  entities.py
backend/src/schemas/: car_schema.py  company_settings_schema.py
backend/src/services/: car_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_car_controller.py
backend/tests/unit/: test_car_service.py
frontend/: .env.example  Dockerfile  README.md  index.html  vite.config.ts
frontend/src/components/: CarCard.tsx  CarModal.tsx  Header.tsx
frontend/src/pages/: Home.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.scss
templates/: admin.html  index.html  login.html  resultado.html
(+3 files in other folders)
